cli/tests/snapshots/integration__run_images@overlay_xy3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="30.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 20.0 0.0 L 20.0 20.0 L 0.0 20.0 Z" fill="rgba(0, 0, 0, 1.0)" />
    <path d="M 10.0 10.0 L 30.0 10.0 L 30.0 30.0 L 10.0 30.0 Z" fill="rgba(255, 0, 0, 1.0)" />
  </g>
</svg>
