cli/tests/snapshots/integration__run_images@place_image_align2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="64.0" height="64.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="64.0" height="64.0" transform="rotate(0.0 32.0 32.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 64.0 0.0 L 64.0 64.0 L 0.0 64.0 Z" fill="rgba(238, 232, 170, 1.0)" />
      <path d="M 24.0 41.569219 L 0.0 0.0 L 48.0 0.0 Z" fill="rgba(154, 205, 50, 1.0)" />
    </g>
  </g>
</svg>
